--- a/src/Dhara/Nurse/AdmitPatientScene.fxml
+++ b/src/Dhara/Nurse/AdmitPatientScene.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="Dhara.Nurse.AdmitPatientSceneController">
    <children>
       <Label layoutX="204.0" layoutY="65.0" text="ADMIT  PATIENT">
          <font>
