--- a/src/Dhara/Nurse/ContactDoctorScene.fxml
+++ b/src/Dhara/Nurse/ContactDoctorScene.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="Dhara.Nurse.ContactDoctorSceneController">
    <children>
       <ComboBox fx:id="chooseDoctorComboBox" layoutX="100.0" layoutY="99.0" onAction="#onActionChooseDoctorComboBox" prefHeight="31.0" prefWidth="181.0" promptText="Choose doctor" />
       <TextField fx:id="enterRequestDetailsTextField" layoutX="100.0" layoutY="157.0" prefHeight="130.0" prefWidth="274.0" promptText="Enter Details of request" />
