--- a/src/Dhara/Nurse/NurseWelcomeScene.fxml
+++ b/src/Dhara/Nurse/NurseWelcomeScene.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="Dhara.Nurse.NurseWelcomeSceneController">
    <children>
       <Label layoutX="180.0" layoutY="123.0" text="WELCOME, NURSE!">
          <font>
