--- a/src/Dhara/Nurse/UpdatePatientDoseScene.fxml
+++ b/src/Dhara/Nurse/UpdatePatientDoseScene.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Dhara.Nurse.UpdatePatientDoseSceneController">
    <children>
       <Label layoutX="166.0" layoutY="25.0" text="UPDATE PATIENT DOSE">
          <font>
