--- a/src/Dhara/Nurse/ViewAdmittedPatientsScene.fxml
+++ b/src/Dhara/Nurse/ViewAdmittedPatientsScene.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="Dhara.Nurse.ViewAdmittedPatientsSceneController">
    <children>
       <TableView fx:id="admittedPatientsTableColoumn" layoutX="38.0" layoutY="162.0" prefHeight="200.0" prefWidth="364.0">
         <columns>
