--- a/src/Dhara/Nurse/ViewAssignedtasksScene.fxml
+++ b/src/Dhara/Nurse/ViewAssignedtasksScene.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="Dhara.Nurse.ViewAssignedtasksSceneController">
    <children>
       <Label layoutX="167.0" layoutY="68.0" text="VIEW ASSIGNED TASKS">
          <font>
