--- a/src/Dhara/Nurse/ViewPatientDetailsScene.fxml
+++ b/src/Dhara/Nurse/ViewPatientDetailsScene.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="Dhara.Nurse.ViewPatientDetailsSceneController">
    <children>
       <Label layoutX="166.0" layoutY="35.0" text="VIEW PATIENT DETAILS">
          <font>
