--- a/src/Dhara/Nurse/ViewPatientPrescriptionScene.fxml
+++ b/src/Dhara/Nurse/ViewPatientPrescriptionScene.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Dhara.Nurse.ViewPatientPrescriptionSceneController">
    <children>
       <Label layoutX="129.0" layoutY="42.0" text="VIEW PATIENT PRESCRIPTION">
          <font>
