--- a/src/Nushrat/Optermetrist/OptometristDashboardScene.fxml
+++ b/src/Nushrat/Optermetrist/OptometristDashboardScene.fxml
@@ -3,8 +3,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="Nushrat.OptometristDashboardSceneController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Nushrat.OptometristDashboardSceneController">
    <children>
       <Label layoutX="234.0" layoutY="179.0" text="welocme optometrist " />
    </children>
