--- a/src/Nushrat/Optermetrist/ContactLensService.fxml
+++ b/src/Nushrat/Optermetrist/ContactLensService.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Nushrat.Optermetrist.ContactLensServiceController">
    <children>
       <Label layoutX="159.0" layoutY="48.0" text="ContactLens Services Schedule">
          <font>
