--- a/src/Dhara/Accountant/AccountantDashboard.fxml
+++ b/src/Dhara/Accountant/AccountantDashboard.fxml
@@ -9,7 +9,7 @@
 
 <BorderPane fx:id="accountantDashBoardBorderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Dhara.Accountant.AccountantDashboardController">
    <top>
-      <MenuBar onDragDetected="#myDashboardOnClick" BorderPane.alignment="CENTER">
+      <MenuBar BorderPane.alignment="CENTER">
         <menus>
           <Menu mnemonicParsing="false" text="MyDesk">
             <items>
@@ -18,7 +18,10 @@
                   <MenuItem mnemonicParsing="false" onAction="#expinditureOnClick" text="Expenditure" />
             </items>
           </Menu>
-          <Menu mnemonicParsing="false" onAction="#signOutOnClick" text="SignOut" />
+          <Menu mnemonicParsing="false" text="SignOut">
+               <items>
+                  <MenuItem mnemonicParsing="false" onAction="#signOutOnClick" text="sign out" />
+               </items></Menu>
         </menus>
       </MenuBar>
    </top>
