--- a/src/Dhara/Nurse/NurseDashBoardScene.fxml
+++ b/src/Dhara/Nurse/NurseDashBoardScene.fxml
@@ -1,11 +1,50 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Dhara.Nurse.NurseDashBoardSceneController">
-    
-</AnchorPane>
+<BorderPane fx:id="nurseDashboardBorderpane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Dhara.Nurse.NurseDashBoardSceneController">
+   <top>
+      <MenuBar BorderPane.alignment="CENTER">
+        <menus>
+            <Menu mnemonicParsing="false" text="Add Complaint">
+              <items>
+                <MenuItem mnemonicParsing="false" onAction="#complaintOnClick" text="Complaint" />
+              </items>
+            </Menu>
+          <Menu mnemonicParsing="false" text="MyDesk">
+            <items>
+              <MenuItem mnemonicParsing="false" onAction="#viewAssignmentOnClick" text="View AssignedTasks" />
+                  <MenuItem mnemonicParsing="false" onAction="#requestForDocOnClick" text="Request for Doctor" />
+            </items>
+          </Menu>
+            <Menu mnemonicParsing="false" text="Patient">
+               <items>
+                  <MenuItem mnemonicParsing="false" onAction="#addPatientDetailsOnClick" text="Add Patient Details" />
+                  <MenuItem mnemonicParsing="false" onAction="#prescriptionPieChartOnClick" text="update prescription pie chart" />
+                  <MenuItem mnemonicParsing="false" onAction="#admitPatientOnClick" text="AdmitPatient" />
+                  <MenuItem mnemonicParsing="false" onAction="#viewAdmittedPatientOnClick" text="View Admitted Patients" />
+                  <MenuItem mnemonicParsing="false" onAction="#patientDetailsOnClick" text="View Patient Details" />
+                  <MenuItem mnemonicParsing="false" onAction="#ViewMedicineChartOnClick" text="View patient meds in chart" />
+               </items>
+            </Menu>
+          <Menu mnemonicParsing="false" text="SignOut">
+            <items>
+              <MenuItem mnemonicParsing="false" text="Delete" />
+            </items>
+          </Menu>
+        </menus>
+      </MenuBar>
+   </top>
+   <center>
+      <Label text="WELCOME, NURSE!" BorderPane.alignment="CENTER">
+         <font>
+            <Font name="System Bold" size="24.0" />
+         </font>
+      </Label>
+   </center>
+</BorderPane>
