--- a/src/CommonScenes/RegisterScene.fxml
+++ b/src/CommonScenes/RegisterScene.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -8,15 +9,25 @@
 
 <AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CommonScenes.RegisterSceneController">
    <children>
-      <Label layoutX="136.0" layoutY="48.0" text="BANGLADESH EYE HOSPITAL">
+      <Label layoutX="161.0" layoutY="45.0" text="PATIENT REGISTRATION">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <TextField fx:id="idTextField" layoutX="201.0" layoutY="185.0" promptText="ID" />
-      <TextField fx:id="nameTextField" layoutX="201.0" layoutY="144.0" promptText="Name" />
-      <TextField fx:id="passwordtextField" layoutX="201.0" layoutY="220.0" promptText="Password" />
-      <Button layoutX="257.0" layoutY="267.0" mnemonicParsing="false" onAction="#registerButtonOnClick" text="Register" />
-      <Label layoutX="229.0" layoutY="96.0" text="Patient Registration" />
+      <TextField fx:id="idTextField" layoutX="86.0" layoutY="178.0" promptText="ID" />
+      <TextField fx:id="nameTextField" layoutX="86.0" layoutY="137.0" promptText="Name" />
+      <TextField fx:id="passwordtextField" layoutX="85.0" layoutY="220.0" promptText="Password" />
+      <Button layoutX="246.0" layoutY="284.0" mnemonicParsing="false" onAction="#registerButtonOnClick" prefHeight="48.0" prefWidth="108.0" text="Register" />
+      <Label layoutX="213.0" layoutY="88.0" text="Bangladesh Eye Hospital" />
+      <TextField fx:id="emailTextField" layoutX="353.0" layoutY="220.0" promptText="email" />
+      <TextField fx:id="genderTextField" layoutX="353.0" layoutY="137.0" promptText="gender" />
+      <DatePicker fx:id="DOBDatePicker" layoutX="353.0" layoutY="178.0" prefHeight="31.0" prefWidth="187.0" promptText="DOB" />
+      <Label layoutX="294.0" layoutY="183.0" text="DOB" />
+      <Label layoutX="294.0" layoutY="142.0" text="gender" />
+      <Label layoutX="292.0" layoutY="225.0" text="Email" />
+      <Label layoutX="30.0" layoutY="225.0" text="Pass" />
+      <Label layoutX="30.0" layoutY="178.0" text="ID" />
+      <Label layoutX="27.0" layoutY="142.0" text="Name" />
+      <Button layoutX="34.0" layoutY="30.0" mnemonicParsing="false" onAction="#backButtonOnClick" text="Back" />
    </children>
 </AnchorPane>
