--- a/src/Dhara/Accountant/CreateInsuranceRecordScene.fxml
+++ b/src/Dhara/Accountant/CreateInsuranceRecordScene.fxml
@@ -9,8 +9,8 @@
 
 <AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Dhara.Accountant.CreateInsuranceRecordSceneController">
    <children>
-      <TextField fx:id="ItemTextField" layoutX="107.0" layoutY="209.0" prefHeight="38.0" prefWidth="187.0" text="Item ensured" />
-      <TextField fx:id="amtTextField" layoutX="107.0" layoutY="258.0" prefHeight="35.0" prefWidth="187.0" text="Insurance Amount" />
+      <TextField fx:id="ItemTextField" layoutX="107.0" layoutY="209.0" prefHeight="38.0" prefWidth="187.0" promptText="item ensured" />
+      <TextField fx:id="amtTextField" layoutX="107.0" layoutY="258.0" prefHeight="35.0" prefWidth="187.0" promptText="insurance amount" />
       <Button layoutX="375.0" layoutY="247.0" mnemonicParsing="false" onAction="#addButtonOnClick" text="Add" />
       <Button layoutX="21.0" layoutY="20.0" mnemonicParsing="false" onAction="#backButtonOnClick" text="Back" />
       <Label layoutX="140.0" layoutY="86.0" text="CREATE INSURANCE RECORD">
