--- a/src/CommonScenes/LoginScene.fxml
+++ b/src/CommonScenes/LoginScene.fxml
@@ -10,7 +10,7 @@
 <AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CommonScenes.LoginSceneController">
    <children>
       <Button layoutX="261.0" layoutY="278.0" mnemonicParsing="false" onAction="#onClickLoginButton" prefHeight="31.0" prefWidth="74.0" text="Login" />
-      <Label layoutX="133.0" layoutY="83.0" text="BANGLADESH EYE HOSPITAL">
+      <Label layoutX="228.0" layoutY="84.0" text="USER LOGIN">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
