--- a/src/CommonScenes/StartScene.fxml
+++ b/src/CommonScenes/StartScene.fxml
@@ -16,7 +16,7 @@
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <Circle fill="DODGERBLUE" layoutX="294.0" layoutY="89.0" radius="16.0" stroke="BLACK" strokeType="INSIDE" />
+      <Circle fill="#eaf3ff" layoutX="294.0" layoutY="89.0" radius="16.0" stroke="BLACK" strokeType="INSIDE" />
       <Line endX="294.0" endY="73.00001525878906" startX="251.0" startY="90.0" />
       <Line endX="284.0" endY="95.0" layoutX="10.0" layoutY="10.0" startX="240.29290771484375" startY="80.70712280273438" />
       <Line endX="292.0" endY="105.0" layoutX="44.0" layoutY="-18.0" startX="250.70709228515625" startY="90.29290771484375" />
