--- a/src/Dhara/Accountant/CreateExpenseRecordScene.fxml
+++ b/src/Dhara/Accountant/CreateExpenseRecordScene.fxml
@@ -21,5 +21,9 @@
       <Button layoutX="24.0" layoutY="22.0" mnemonicParsing="false" onAction="#backButtonOnClick" text="back" />
       <ComboBox fx:id="chooseSpendReasonComboBox" layoutX="177.0" layoutY="185.0" prefHeight="31.0" prefWidth="218.0" promptText="choose spend reason" />
       <TextField fx:id="detailsTextField" layoutX="177.0" layoutY="266.0" prefHeight="81.0" prefWidth="218.0" promptText="details:" />
+      <Label layoutX="103.0" layoutY="152.0" text="Amount:" />
+      <Label layoutX="62.0" layoutY="190.0" text="Spend Reason:" />
+      <Label layoutX="83.0" layoutY="229.0" text="Date Spent:" />
+      <Label layoutX="83.0" layoutY="285.0" prefHeight="44.0" prefWidth="77.0" text="Details of expense:" wrapText="true" />
    </children>
 </AnchorPane>
