--- a/src/Dhara/Accountant/ViewExpenseRecordScene.fxml
+++ b/src/Dhara/Accountant/ViewExpenseRecordScene.fxml
@@ -4,7 +4,6 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
@@ -27,6 +26,6 @@
       </Label>
       <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#backButtonOnClick" text="Back" />
       <Button layoutX="379.0" layoutY="146.0" mnemonicParsing="false" onAction="#viewDetailsOnClick" text="View Details" />
-      <TextArea fx:id="detailsTextField" layoutX="314.0" layoutY="186.0" prefHeight="160.0" prefWidth="242.0" />
+      <Label fx:id="detailsTextField" layoutX="329.0" layoutY="190.0" prefHeight="148.0" prefWidth="208.0" style="-fx-background-color: white;" />
    </children>
 </AnchorPane>
