--- a/src/Dhara/Accountant/ViewInsuranceRecordScene.fxml
+++ b/src/Dhara/Accountant/ViewInsuranceRecordScene.fxml
@@ -4,7 +4,6 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
@@ -12,9 +11,9 @@
    <children>
       <TableView fx:id="InsuranceTableView" layoutX="28.0" layoutY="85.0" prefHeight="282.0" prefWidth="353.0">
         <columns>
-          <TableColumn fx:id="itemTableColoumn" prefWidth="75.0" text="item" />
-          <TableColumn fx:id="InsuranceAmountTableColoumn" prefWidth="140.0" text="Insurance amount" />
-            <TableColumn fx:id="dateOfIssueTableColoumn" prefWidth="138.0" text="date of issue" />
+          <TableColumn fx:id="itemTableColoumn" prefWidth="131.0" text="item" />
+          <TableColumn fx:id="InsuranceAmountTableColoumn" prefWidth="96.0" text="amount" />
+            <TableColumn fx:id="dateOfIssueTableColoumn" prefWidth="126.0" text="date of issue" />
         </columns>
       </TableView>
       <Button layoutX="423.0" layoutY="162.0" mnemonicParsing="false" onAction="#viewDetailsOnButton" text="View details" />
@@ -25,6 +24,6 @@
          </font>
       </Label>
       <Button layoutX="28.0" layoutY="18.0" mnemonicParsing="false" onAction="#BackOnClick" text="Back" />
-      <TextArea fx:id="detailsTextField" layoutX="396.0" layoutY="209.0" prefHeight="154.0" prefWidth="189.0" />
+      <Label fx:id="detailsTextField" layoutX="414.0" layoutY="216.0" prefHeight="149.0" prefWidth="153.0" style="-fx-background-color: white;" />
    </children>
 </AnchorPane>
