--- a/src/Nazifa/Patient/SignOutScene.fxml
+++ b/src/Nazifa/Patient/SignOutScene.fxml
@@ -4,8 +4,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="Nazifa.Patient.SignOutSceneController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Nazifa.Patient.SignOutSceneController">
    <children>
       <Label layoutX="286.0" layoutY="67.0" text="Are you sure" />
       <Button layoutX="191.0" layoutY="194.0" mnemonicParsing="false" text="Yes" />
