--- a/src/Nazifa/Doctor/CompleteTaskScene.fxml
+++ b/src/Nazifa/Doctor/CompleteTaskScene.fxml
@@ -2,17 +2,24 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="Nazifa.Doctor.CompleteTaskSceneController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Nazifa.Doctor.CompleteTaskSceneController">
    <children>
-      <Label layoutX="199.0" layoutY="88.0" text="COMPLETE TASKS">
+      <Label layoutX="220.0" layoutY="48.0" text="VIEW TASKS">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
       <Button layoutX="34.0" layoutY="35.0" mnemonicParsing="false" onAction="#backButtonOnClick" text="Back" />
+      <TableView fx:id="taskTableView" layoutX="95.0" layoutY="100.0" prefHeight="248.0" prefWidth="420.0">
+        <columns>
+          <TableColumn fx:id="senderIDTableColumn" prefWidth="92.33334350585938" text="Sender ID" />
+          <TableColumn fx:id="taskTableColumn" prefWidth="326.6666564941406" text="Task" />
+        </columns>
+      </TableView>
    </children>
 </AnchorPane>
