--- a/src/Nushrat/Pharmacist/CalculateMedicinePrice.fxml
+++ b/src/Nushrat/Pharmacist/CalculateMedicinePrice.fxml
@@ -17,20 +17,17 @@
       </Label>
       <TableView fx:id="medListTableView" layoutX="300.0" layoutY="80.0" prefHeight="200.0" prefWidth="286.0">
         <columns>
-          <TableColumn prefWidth="109.66668701171875" text="MedicineName" />
-          <TableColumn prefWidth="72.33331298828125" text="Unit Price" />
-            <TableColumn prefWidth="101.0" text="Dose/Quantity" />
+          <TableColumn fx:id="medNameTableColumn" prefWidth="109.66668701171875" text="MedicineName" />
+          <TableColumn fx:id="unitPriceTableColumn" prefWidth="72.33331298828125" text="Unit Price" />
+            <TableColumn fx:id="doseTableColumn" prefWidth="101.0" text="Dose/Quantity" />
         </columns>
       </TableView>
       <Button layoutX="236.0" layoutY="255.0" mnemonicParsing="false" onMouseClicked="#addToListBtnOnClick" text="Add" />
-      <Button layoutX="426.0" layoutY="361.0" mnemonicParsing="false" onMouseClicked="#dashboardBtnOnClick" prefHeight="25.0" prefWidth="162.0" text="Go To Dashboard" />
       <Label layoutX="31.0" layoutY="115.0" text="Medicine Name:" />
       <TextField fx:id="medNameTextField" layoutX="125.0" layoutY="111.0" promptText="Enter Medicine Name" />
       <Label layoutX="34.0" layoutY="172.0" text="Unit Price: " />
       <TextField fx:id="unitPriceTextField1" layoutX="125.0" layoutY="168.0" promptText="Enter Unit Price" />
       <Label layoutX="34.0" layoutY="216.0" text="Dose/Quantity:" />
       <TextField fx:id="doseOrQuantityTextField11" layoutX="125.0" layoutY="212.0" promptText="Enter Dose/Quantity" />
-      <Label layoutX="373.0" layoutY="296.0" text="Total Amount:" />
-      <TextField fx:id="totalAmountTextField" layoutX="460.0" layoutY="292.0" prefHeight="25.0" prefWidth="126.0" promptText="Tk" />
    </children>
 </AnchorPane>
